--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -6,7 +6,10 @@
 
     <mat-card class="first-wrap line-height mat-card-sd">
       <ng-template matStepLabel>Program Logistics</ng-template>
-      <div class="col-md-12"><span class="header-text-style">Event Information</span></div>
+      <div class="col-md-12"><span class="header-text-style">Event Information</span>
+        <button mat-button>Open dialog</button>
+      </div>
+     
       <div class="clearfix"></div>
       <div class="col-md-12">
         <hr class="hr-color">
