--- a/src/app/manage-spkeaker-content/speaker-uploded.html
+++ b/src/app/manage-spkeaker-content/speaker-uploded.html
@@ -1,9 +1,10 @@
 <div class="speaker-popup">
-<div class="master-heading text-center">Speaker Content Has Been Uploaded Successfully!</div>
- 
-<p>This resource has been associated with John Smith.</p>
+    <img class="close-position" src="/assets/icons/popup-close.png">
+    <div class="master-heading text-center">Speaker Content Has Been Uploaded Successfully!</div>
 
-<div class="text-center">
-    <button mat-button mat-dialog-close class="btn btn-blue">Done</button>
-</div>
+    <p>This resource has been associated with John Smith.</p>
+
+    <div class="text-center">
+        <button mat-button mat-dialog-close class="btn btn-blue">Done</button>
+    </div>
 </div>
