Completed Login and forgot popup

--- a/src/app/initiate-training/select-date.html
+++ b/src/app/initiate-training/select-date.html
@@ -37,7 +37,7 @@
        </div> 
        <div class="col-md-12 file-info mr-b-0">
         <div class="form-group" *ngIf="selectedDate==='online'">
-            <label>Complte By Date</label>
+            <label>Complete By Date</label>
             <mat-form-field>
               <input matInput [matDatepicker]="picker11" placeholder="">
               <mat-datepicker-toggle matSuffix [for]="picker11"></mat-datepicker-toggle>
