--- a/src/app/login/login-forgot.html
+++ b/src/app/login/login-forgot.html
@@ -1,53 +1,76 @@
-<div class="col-md-12 select-date-popup-parent">
-    <img src="/assets/icons/popup-close.png" class="close-position">
-    
-    <div class="daliog-master-heading">Select Training Date</div>
+<div class="row custom-row">
+<div class="col-md-12 logo-header">
+        <img src="/assets/img/logo-2.png" class="">
+</div>
+</div>
+      
+
+<div class="col-md-12 login-forgot-popup-parent">
+    <!-- <img src="/assets/icons/popup-close.png" class="close-position"> -->
+  
+    <div *ngIf="log">
+    <div class="daliog-master-heading">Login to Your Account</div>
+    <hr>
     <div class="col-md-12 nopadding">
        <div class="col-md-12 file-info">
         <div class="form-group">
-            <label>Training Type</label>
+            <label>User Name</label>
             <mat-form-field>
-              <mat-select placeholder="" [(ngModel)]="selectedDate">
-                <mat-option *ngFor="let data of selectDate" [value]="data.value">
-                  {{data.viewValue}}
-                </mat-option>
-              </mat-select>
+                <input matInput placeholder="" value="">
             </mat-form-field>
           </div>
        </div>
        <div class="col-md-12 file-info">
-        <div class="form-group" *ngIf="selectedDate==='live'">
-            <label>Start Date</label>
+        <div class="form-group">
+            <label>Password</label>
             <mat-form-field>
-              <input matInput [matDatepicker]="picker" placeholder="">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
+                <input matInput placeholder="" value="">
             </mat-form-field>
           </div>
        </div>
        <div class="col-md-12 file-info mr-b-0">
-        <div class="form-group" *ngIf="selectedDate==='live'">
-            <label>End Date</label>
-            <mat-form-field>
-              <input matInput [matDatepicker]="picker11" placeholder="">
-              <mat-datepicker-toggle matSuffix [for]="picker11"></mat-datepicker-toggle>
-              <mat-datepicker #picker11></mat-datepicker>
-            </mat-form-field>
-          </div>
+       
        </div> 
        <div class="col-md-12 file-info mr-b-0">
-        <div class="form-group" *ngIf="selectedDate==='online'">
-            <label>Complte By Date</label>
+        <div class="form-group">
+            <mat-checkbox #checkbox1>Remember Me</mat-checkbox>
+          </div>
+       </div>  
+       <div class="col-md-12 text-center nopadding">
+            <button mat-button [mat-dialog-close]="" class="btn btn-blue">Login</button>
+       </div> 
+       <div class="col-md-12 text-center nopadding">
+        <button mat-button class="btn btn-forgot" (click)="toggle()" #forgot>Forgot Password?</button>
+      </div> 
+    </div>
+</div>
+   <!-- forgot password -->
+   <div *ngIf="show">
+   <div class="daliog-master-heading">Forgot Password</div>
+    <hr>
+    <div class="col-md-12 nopadding">
+       <div class="col-md-12 file-info">
+        <div class="form-group">
+           <p class="para-forgot">Please enter your Email Address below and click Continue. An email will be sent to 
+               you with a temporary password.
+        </p>
+        </div>
+       </div>
+       <div class="col-md-12 file-info">
+          <div class="form-group">
+            <label>Email</label>
             <mat-form-field>
-              <input matInput [matDatepicker]="picker11" placeholder="">
-              <mat-datepicker-toggle matSuffix [for]="picker11"></mat-datepicker-toggle>
-              <mat-datepicker #picker11></mat-datepicker>
+                <input matInput placeholder="" value="">
             </mat-form-field>
           </div>
        </div>  
        <div class="col-md-12 text-center nopadding">
-            <button mat-button [mat-dialog-close]="" class="btn btn-blue">Submit</button>
-             
+            <button mat-button [mat-dialog-close]="" class="btn btn-blue">Continue</button>
        </div> 
+       <div class="col-md-12 text-center nopadding">
+        <button mat-button class="btn btn-forgot" (click)="toggle()" #back>Go Back</button>
+      </div> 
     </div>
+   </div>
+
 </div>
