Addded Dashbaoard page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-                <a [routerLink]="['/training']" [routerLinkActive]="['router-link-active']">
+                <a [routerLink]="['/upload-training']" [routerLinkActive]="['router-link-active']">
                   <span class="nav-pad">
                     <img src="assets/icons/training.svg" class="img-responsive" />
                     UPLOAD REFERENCE MATERIAL
