--- a/src/app/login/login-forgot.html
+++ b/src/app/login/login-forgot.html
@@ -65,10 +65,10 @@
           </div>
        </div>  
        <div class="col-md-12 text-center nopadding">
-            <button mat-button [mat-dialog-close]="" class="btn btn-blue">Continue</button>
+            <button mat-button [mat-dialog-close]="" class="btn btn-blue mr-tp-30">Continue</button>
        </div> 
        <div class="col-md-12 text-center nopadding">
-        <button mat-button class="btn btn-forgot" (click)="toggle()" #back>Go Back</button>
+        <button mat-button class="btn btn-forgot" (click)="toggle()">Go Back</button>
       </div> 
     </div>
    </div>
