--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,14 +28,14 @@
             </li>
 
             <li>
-                <a [routerLink]="['/create']" [routerLinkActive]="['router-link-active']">
-                  <span class="nav-pad">
-                    <span class="glyphicon glyphicon-plus"></span>
-                    <div class="clearfix"></div>
-                    CREATE EVENT
-                  </span>
-                </a>
-              </li>
+              <a [routerLink]="['/create']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <span class="glyphicon glyphicon-plus"></span>
+                  <div class="clearfix"></div>
+                  CREATE EVENT
+                </span>
+              </a>
+            </li>
 
             <li>
               <a [routerLink]="['/calender']" [routerLinkActive]="['router-link-active']">
@@ -47,13 +47,13 @@
             </li>
 
             <li>
-                <a [routerLink]="['/initiatetraining']" [routerLinkActive]="['router-link-active']">
-                  <span class="nav-pad">
-                    <img src="assets/icons/slides.svg" class="img-responsive" />
-                    SPEAKER
-                  </span>
-                </a>
-              </li>
+              <a [routerLink]="['/initiatetraining']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <img src="assets/icons/slides.svg" class="img-responsive" />
+                  SPEAKER
+                </span>
+              </a>
+            </li>
 
             <li>
               <a [routerLink]="['/training']" [routerLinkActive]="['router-link-active']">
@@ -65,54 +65,65 @@
             </li>
 
             <li>
-                <a [routerLink]="['/upload-training']" [routerLinkActive]="['router-link-active']">
-                  <span class="nav-pad">
-                    <img src="assets/icons/training.svg" class="img-responsive" />
-                    UPLOAD REFERENCE MATERIAL
-                  </span>
-                </a>
-              </li>
+              <a [routerLink]="['/upload-training']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <img src="assets/icons/training.svg" class="img-responsive" />
+                  UPLOAD REFERENCE MATERIAL
+                </span>
+              </a>
+            </li>
 
-              <li>
-                  <a [routerLink]="['/speaker-content']" [routerLinkActive]="['router-link-active']">
-                    <span class="nav-pad">
-                      <img src="assets/icons/training.svg" class="img-responsive" />
-                      MANAGE SPEAKER CONTENT
-                    </span>
-                  </a>
-              </li>
-             
+            <li>
+              <a [routerLink]="['/speaker-content']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <img src="assets/icons/training.svg" class="img-responsive" />
+                  MANAGE SPEAKER CONTENT
+                </span>
+              </a>
+            </li>
+
             <li>
               <a [routerLink]="['/add-venue']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
-                    <span class="glyphicon glyphicon-map-marker"></span>
-                    <div class="clearfix"></div>
+                  <span class="glyphicon glyphicon-map-marker"></span>
+                  <div class="clearfix"></div>
                   VENUE
                 </span>
               </a>
             </li>
 
             <li>
-                <a [routerLink]="['/attendee']" [routerLinkActive]="['router-link-active']">
-                  <span class="nav-pad">
-                      <span class="glyphicon glyphicon-list"></span>
-                      <div class="clearfix"></div>
-                    ATTENDEE LIST
-                  </span>
-                </a>
-              </li>
-
-              <li>
-                  <a [routerLink]="['/reports']" [routerLinkActive]="['router-link-active']">
-                    <span class="nav-pad">
-                        <span class="glyphicon glyphicon-stats"></span>
-                    <div class="clearfix"></div>
-                      REPORTS
-                    </span>
-                  </a>
-                </li>
+              <a [routerLink]="['/attendee']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <span class="glyphicon glyphicon-list"></span>
+                  <div class="clearfix"></div>
+                  ATTENDEE LIST
+                </span>
+              </a>
+            </li>
 
             <li>
+              <a [routerLink]="['/reports']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <span class="glyphicon glyphicon-stats"></span>
+                  <div class="clearfix"></div>
+                  REPORTS
+                </span>
+              </a>
+            </li>
+
+            <li>
+              <a [routerLink]="['/reconcile-speaker-program']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <span class="glyphicon glyphicon-stats"></span>
+                  <div class="clearfix"></div>
+                  RECONCILE EXPENSE
+                </span>
+              </a>
+            </li>
+
+            <li>
+
               <a [routerLink]="['/myprofile']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <img src="assets/icons/profile.svg" class="img-responsive" />
