--- a/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
+++ b/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
@@ -1,4 +1,4 @@
-<mat-horizontal-stepper #stepper selectedIndex = 1>
+<mat-horizontal-stepper #stepper>
     <ng-template matStepperIcon="edit">
         <mat-icon>done</mat-icon>
     </ng-template>
