--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
           <!-- Weight Column -->
           <ng-container matColumnDef="Topic">
             <th mat-header-cell *matHeaderCellDef> Topic </th>
-            <td mat-cell *matCellDef="let element"> {{element.Topic}} </td>
+            <td mat-cell *matCellDef="let element"> <span class="table-clr-blue">{{element.Topic}} </span></td>
           </ng-container>
 
           <!-- Symbol Column -->
@@ -60,7 +60,7 @@
       <div class="col-md-12 dashboard-heading-wrapper">
         <p><span class="master-heading"> Tasks </span> <span class="clr-blue">View All</span></p> 
         <hr> 
-          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
   
             <!--- Note that these columns can be defined in any order.
                       The actual rendered columns are set as a property on the row definition" -->
@@ -80,14 +80,9 @@
             <!-- Weight Column -->
             <ng-container matColumnDef="Topic">
               <th mat-header-cell *matHeaderCellDef> Topic </th>
-              <td mat-cell *matCellDef="let element"> {{element.Topic}} </td>
+              <td mat-cell *matCellDef="let element"><span class="table-clr-blue">{{element.Topic}} </span> </td>
             </ng-container>
-  
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="Location">
-              <th mat-header-cell *matHeaderCellDef> Location </th>
-              <td mat-cell *matCellDef="let element"> {{element.Location}} </td>
-            </ng-container>
+   
   
             <ng-container matColumnDef="Speaker">
                 <th mat-header-cell *matHeaderCellDef> Speaker </th>
@@ -99,13 +94,13 @@
                 <td mat-cell *matCellDef="let element"> {{element.SalesRep}} </td>
             </ng-container>
   
-            <ng-container matColumnDef="RSVP">
-                <th mat-header-cell *matHeaderCellDef> RSVP </th>
-                <td mat-cell *matCellDef="let element"> {{element.RSVP}} </td>
+            <ng-container matColumnDef="Task">
+                <th mat-header-cell *matHeaderCellDef> Task </th>
+                <td mat-cell *matCellDef="let element"><span class="table-clr-blue">{{element.Task}}</span></td>
             </ng-container> 
   
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns1;"></tr>
           </table> 
         <div class="clearfix"></div> 
       </div>
