--- a/src/app/create-event/event-popup.html
+++ b/src/app/create-event/event-popup.html
@@ -5,9 +5,10 @@
     <div class="form-group">
         <label>Territory</label>
         <mat-form-field>
-            <mat-select placeholder="select-territory">
-                <mat-option [value]="select-territory">Select Territory</mat-option>
+            <mat-select placeholder="" value="select-territory">
+                <mat-option value="select-territory">Select Territory</mat-option>
             </mat-select>
+            
         </mat-form-field>
     </div>
     <div class="text-center">
