--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,11 +1,15 @@
-.dashboard-admin-wrapper mat-card{
+.dashboard-admin-wrapper mat-card:first-child{
     padding: 38px 44px 0px 45px; 
     margin-top: 70px;
     margin-bottom: 0px;
 }
-.dashboard-admin-wrapper mat-card:nth-child(2){
+.dashboard-admin-wrapper mat-card{
     margin-top: 50px;
-    margin-bottom: 70px;
+    margin-bottom: 0px;
+    padding: 38px 44px 0px 45px; 
+}
+.dashboard-admin-wrapper mat-card:last-child{ 
+    margin-bottom: 50px;
 }
 .dashboard-admin-wrapper mat-card hr{
     margin-top: 0px;
@@ -64,3 +68,4 @@ tr.mat-footer-row, tr.mat-row {
     }
     
 }
+
