--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -105,4 +105,54 @@
         <div class="clearfix"></div> 
       </div>
     </mat-card>
+
+    <mat-card>
+      <div class="col-md-12 dashboard-heading-wrapper">
+        <p><span class="master-heading"> Notification </span> <span class="clr-blue">View All</span></p> 
+        <hr> 
+          <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8">
+  
+            <!--- Note that these columns can be defined in any order.
+                      The actual rendered columns are set as a property on the row definition" -->
+  
+            <!-- Position Column -->
+            <ng-container matColumnDef="ID">
+              <th mat-header-cell *matHeaderCellDef> ID </th>
+              <td mat-cell *matCellDef="let element"> {{element.ID}} </td>
+            </ng-container>
+  
+            <!-- Name Column -->
+            <ng-container matColumnDef="Date">
+              <th mat-header-cell *matHeaderCellDef> Date </th>
+              <td mat-cell *matCellDef="let element"> {{element.Date}} </td>
+            </ng-container>
+  
+            <!-- Weight Column -->
+            <ng-container matColumnDef="Topic">
+              <th mat-header-cell *matHeaderCellDef> Topic </th>
+              <td mat-cell *matCellDef="let element"><span class="table-clr-blue">{{element.Topic}} </span> </td>
+            </ng-container>
+   
+  
+            <ng-container matColumnDef="Action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let element"> {{element.Action}} </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="By">
+                <th mat-header-cell *matHeaderCellDef> By </th>
+                <td mat-cell *matCellDef="let element"> {{element.By}} </td>
+            </ng-container>
+  
+            <ng-container matColumnDef="Speaker">
+                <th mat-header-cell *matHeaderCellDef> Speaker </th>
+                <td mat-cell *matCellDef="let element"><span class="table-clr-blue">{{element.Speaker}}</span></td>
+            </ng-container> 
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
+          </table> 
+        <div class="clearfix"></div> 
+      </div>
+    </mat-card>
 </div>
