create patiant speaker completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
             </li>
 
             <li>
-              <a [routerLink]="['/initiatetraining']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/speaker']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <img src="assets/icons/slides.svg" class="img-responsive" />
                   SPEAKER
@@ -103,7 +103,7 @@
             </li>
 
             <li>
-              <a [routerLink]="['/reports']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/initiatetraining']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <span class="glyphicon glyphicon-stats"></span>
                   <div class="clearfix"></div>
