--- a/src/app/speaker/speaker.component.html
+++ b/src/app/speaker/speaker.component.html
@@ -382,7 +382,7 @@
   <div class="clearfix"></div>
   <div class="col-md-12 mr-top-67">
     <div class="col-md-6">
-      <div class="form-group btn-wrap text-right">
+      <div class="form-group btn-wrap text-right white-btn-wrap">
         <button mat-button class="btn btn-white">Reset</button>
       </div>
     </div>
