--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -2,14 +2,17 @@
     padding: 38px 44px 0px 45px; 
     margin-top: 70px;
     margin-bottom: 0px;
+    box-shadow: 0 6px 24px 0 #E2E9F7;
 }
 .dashboard-admin-wrapper mat-card{
     margin-top: 50px;
     margin-bottom: 0px;
     padding: 38px 44px 0px 45px; 
+    box-shadow: 0 6px 24px 0 #E2E9F7;
 }
 .dashboard-admin-wrapper mat-card:last-child{ 
     margin-bottom: 50px;
+    box-shadow: 0 6px 24px 0 #E2E9F7;
 }
 .dashboard-admin-wrapper mat-card hr{
     margin-top: 0px;
