--- a/src/app/manage-spkeaker-content/manage-spkeaker-content.component.html
+++ b/src/app/manage-spkeaker-content/manage-spkeaker-content.component.html
@@ -39,7 +39,7 @@
         <div class="clearfix"></div>
         <div class="mat-check-wrap">
           
-          <div class="col-md-12">
+          <div class="col-md-12 hidden">
             
             <label>Access Roll</label>
             <div class="row">
@@ -92,6 +92,8 @@
             <div class="col-md-3">
               <mat-checkbox>Global Admin</mat-checkbox>
             </div> 
+          </div>
+        </div>  
             <div class="clearfix"></div>
             <div class="col-md-12 text-right white-btn-wrap"> 
                 <button mat-button class="btn btn-white" (click)="openDialog()">Upload Files</button>
@@ -99,8 +101,8 @@
             <div class="col-md-12 text-center">
                 <button mat-button class="btn btn-blue">Submit</button>
             </div>
-          </div>
-          </div>
+          
+          
         </div>
       </div><!-- row -->
     </div>
