--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="sidebar-nav">
       <div class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-          <button type="button" (click)="toggle()" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -15,7 +15,7 @@
           </button>
           <span class="visible-xs navbar-brand">Menu</span>
         </div>
-        <div class="navbar-collapse sidebar-navbar-collapse pd-nv-0" *ngIf="!show_dialog">
+        <div class="navbar-collapse sidebar-navbar-collapse pd-nv-0 custom-hide">
           <ul class="nav navbar-nav nav-pd-wd">
 
             <li>
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-              <a [routerLink]="['/upload-training']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/upload-reference']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <img src="assets/icons/training.svg" class="img-responsive" />
                   UPLOAD REFERENCE MATERIAL
