--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,20 @@
               </a>
             </li>
 
+            <!--<li class="has-submenu">
+              <a [routerLink]="['/create']" [routerLinkActive]="['router-link-active']">
+                <span class="nav-pad">
+                  <span class="glyphicon glyphicon-plus"></span>
+                  <div class="clearfix"></div>
+                  CREATE EVENT
+                </span>
+              </a>
+              <ul class="submenu">
+                <li>menu 1</li>
+                <li>menu 2</li>
+              </ul>
+            </li>-->
+
             <li>
               <a [routerLink]="['/calender']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
